<resources>
    <string name="app_name">食物派</string>
    <string name="food_bai_ke">食物百科</string>
    <string name="browser_food">逛吃</string>
    <string name="my">我的</string>
    <string name="my_photo">我的照片</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_upload_data">上传食物数据</string>
    <string name="my_order">我的订单</string>
    <string name="my_login">点击登录</string>
    <string name="qq">QQ</string>
    <string name="wei_xin">微信</string>
    <string name="wei_bo">微博</string>
    <string name="bo_he">薄荷</string>
    <string name="login">登录</string>
    <string name="setting">设置</string>
    <string name="version">食物派版本号: V2.6</string>
    <string name="share">将食物派分享给朋友</string>
    <string name="measure_score">评个分吧</string>
    <string name="clear_cache">清除缓存</string>
    <string name="suggest">给我们提个建议</string>
    <string name="no_register">不用注册, 用以下账号直接登录</string>
    <string name="pic_detail">图片详情</string>
    <string name="wei_collection">微信收藏</string>
    <string name="sina_wei_bo">新浪微博</string>
    <string name="wei_chat">微信好友</string>
    <string name="wei_member">微信朋友圈</string>
    <string name="qq_zone">QQ空间</string>
    <string name="username">用户名</string>
    <string name="last_search">最近搜索</string>
    <string name="clear_history">清空历史记录</string>
    <string name="query_food_info">查询食物信息</string>
    <string name="input_food_name">请输入食物名称</string>
    <string name="food_analysis">饮食分析</string>
    <string name="search_compare">搜索对比</string>
    <string name="scan_compare">扫码对比</string>
    <string name="food_category">食物分类</string>
    <string name="hot_brand">热门品牌</string>
    <string name="restaurant">餐饮连锁</string>
    <string name="nutrition_order">营养素排序</string>
    <string name="news_detail">资讯详情</string>
    <string name="shared">分享</string>
    <string name="collection">收藏</string>
    <string name="have_a_dream">梦画-睡个好觉, 画个好梦</string>


    <!--测试使用-->
    <string name="test">测试</string>

</resources>
