<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/WidthMatchAndHeightWrap"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <!--头部-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/two_hundred_twenty"
            android:focusableInTouchMode="true">

            <ImageView
                style="@style/WidthAndHeightMatch"
                android:scaleType="fitXY"
                android:src="@mipmap/img_home_bg" />

            <TextView
                style="@style/WidthAndHeightWrap"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/ten"
                android:text="@string/app_name"
                android:textColor="@color/my_button_line"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/query_info"
                style="@style/WidthAndHeightWrap"
                android:layout_centerInParent="true"
                android:text="@string/query_food_info"
                android:textColor="@color/my_button_line"
                android:textSize="@dimen/twenty_size" />

            <RelativeLayout
                style="@style/WidthMatchAndHeightWrap"
                android:layout_below="@id/query_info"
                android:layout_margin="@dimen/twenty"
                android:paddingBottom="@dimen/ten"
                android:paddingTop="@dimen/ten">

                <ImageView
                    style="@style/WidthAndHeightWrap"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/five"
                    android:scaleType="center"
                    android:src="@mipmap/ic_home_search" />

                <Button
                    android:id="@+id/btn_search"
                    style="@style/WidthAndHeightMatch"
                    android:background="@color/my_button_line"
                    android:drawableLeft="@mipmap/ic_home_search"
                    android:gravity="center_vertical"
                    android:hint="@string/input_food_name"
                    android:paddingLeft="@dimen/ten"
                    android:textColor="#ea8b51"
                    android:textSize="@dimen/eighteen_size" />

            </RelativeLayout>


        </RelativeLayout>

        <!--对比-->
        <LinearLayout
            style="@style/WidthMatchAndHeightWrap"
            android:layout_margin="@dimen/twenty"
            android:orientation="horizontal">


            <LinearLayout
                style="@style/WidthZeroAndHeightMatchWeightOne"
                android:orientation="vertical">

                <ImageButton
                    style="@style/WidthMatchAndHeightZeroWeightOne"
                    android:background="@color/my_button_line"
                    android:src="@drawable/food_bai_ke_analysis" />

                <TextView
                    style="@style/WidthMatchAndHeightZeroWeightOne"
                    android:background="@color/my_button_line"
                    android:gravity="center"
                    android:text="@string/food_analysis" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/view_height"
                android:background="#a7a0a0" />

            <LinearLayout
                style="@style/WidthZeroAndHeightMatchWeightOne"
                android:orientation="vertical">

                <ImageButton
                    style="@style/WidthMatchAndHeightZeroWeightOne"
                    android:background="@color/my_button_line"
                    android:src="@drawable/food_bai_ke_compare" />

                <TextView
                    style="@style/WidthMatchAndHeightZeroWeightOne"
                    android:background="@color/my_button_line"
                    android:gravity="center"
                    android:text="@string/search_compare" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/view_height"
                android:background="#a7a0a0" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    style="@style/WidthMatchAndHeightZeroWeightOne"
                    android:background="@color/my_button_line"
                    android:src="@drawable/food_bai_ke_scan" />

                <TextView
                    style="@style/WidthMatchAndHeightZeroWeightOne"
                    android:background="@color/my_button_line"
                    android:gravity="center"
                    android:text="@string/scan_compare" />

            </LinearLayout>


        </LinearLayout>

        <!--食物分类-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:layout_margin="@dimen/twenty"
            android:background="@color/my_button_line"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/ten"
                android:text="@string/food_category" />

            <GridView
                android:id="@+id/gv_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/ten"
                android:numColumns="3"
                android:verticalSpacing="30dp">


            </GridView>

        </LinearLayout>


        <!---->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_margin="@dimen/twenty"
            android:background="@color/my_button_line"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/ten"
                android:text="@string/hot_brand" />

            <GridView
                android:id="@+id/gv_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/ten"
                android:numColumns="3"
                android:verticalSpacing="30dp">


            </GridView>

        </LinearLayout>

        <!--餐饮连锁-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="@dimen/twenty"
            android:background="@color/my_button_line"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/ten"
                android:text="@string/restaurant" />

            <GridView
                android:id="@+id/gv_restaurant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/ten"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="30dp">


            </GridView>

        </LinearLayout>


    </LinearLayout>

</ScrollView>