<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_detail_home_second"
            style="@style/WidthZeroAndHeightMatchWeightOne"
            android:scaleType="center"
            android:src="@mipmap/ic_back_dark_center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/news_detail" />


    </LinearLayout>

    <WebView
        android:id="@+id/web_delicious"
        style="@style/WidthMatchAndHeightZeroWeightOne"></WebView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <!--分享-->
        <LinearLayout
            android:id="@+id/ll_share"
            style="@style/WidthZeroAndHeightMatchWeightOne"
            android:orientation="horizontal">

            <ImageView
                style="@style/WidthZeroAndHeightWrapWeightOne"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/ten"
                android:scaleType="fitEnd"
                android:src="@mipmap/ic_share_dark" />

            <TextView
                style="@style/WidthZeroAndHeightMatchWeightOne"
                android:gravity="center_vertical"
                android:text="@string/shared" />

        </LinearLayout>


        <!--收藏-->
        <LinearLayout
            android:id="@+id/ll_collection_browser_detail"
            style="@style/WidthZeroAndHeightMatchWeightOne"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_collect_browser_detail"
                style="@style/WidthZeroAndHeightWrapWeightOne"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/ten"
                android:scaleType="fitEnd"
                android:src="@mipmap/ic_news_keep_default" />

            <TextView
                android:id="@+id/tv_collect_browser_detail"
                style="@style/WidthZeroAndHeightMatchWeightOne"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/collection" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>